# ai-agent-mcp-client

./: .env.example  README.md  pyproject.toml
llm-resources/: mcp-prompts.txt  mcp-resources.txt
src/ai-agents-mcp-client/: main.py  mcp_client.py
src/ai-agents-mcp-client/chunking/: __init__.py  chunking_const.py  chunking_helper.py  chunking_service.py  document_specific_chunking.py
src/ai-agents-mcp-client/core/: client_manager.py  vector_db.py
src/ai-agents-mcp-client/exceptions/: service_exceptions.py
src/ai-agents-mcp-client/order_processing/: order_processing_controller.py  order_processing_dto.py  order_processing_service.py
src/ai-agents-mcp-client/preprocess/: preprocess_dto.py  preprocess_service.py
src/ai-agents-mcp-client/products/: __init__.py  product_controller.py  product_dto.py  product_performance_controller.py  product_performance_service.py  product_service.py
src/ai-agents-mcp-client/recommendations/: recommendations_controller.py  recommendations_dto.py  recommendations_service.py
src/ai-agents-mcp-client/schemas/: error_schemas.py
