[project]
name = "ai-agents-mcp-client"
version = "0.1.0"
description = ""
authors = [
    {name = "Cerberoseee",email = "tranlethaison123@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11, <4.0"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "langchain (>=0.3.24,<0.4.0)",
    "openai (>=1.76.2,<2.0.0)",
    "colorama (>=0.4.6,<0.5.0)",
    "langchain-openai (>=0.3.16,<0.4.0)",
    "aiohttp (>=3.11.18,<4.0.0)",
    "mcp (>=1.8.0,<2.0.0)",
    "pymongo (>=4.13.0,<5.0.0)",
    "numpy (>=2.2.6,<3.0.0)",
]

[tool.poetry]
packages = [{include = "ai-agents-mcp-client", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
